--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="iso-8859-2">
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>{% block title %}Index{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
