--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,7 @@ body {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    transition: background 0.5s, border-color 0.5s, color 0.5s;
 }
 
 .navbar-li a:hover {
@@ -62,42 +63,50 @@ body {
 }
 
 
+
 /* ------------- ADMIN PANEL ------------ */
 .admin-grid-container {
     display: grid;
-    grid-template-columns: 0.3fr 1.4fr;
+    grid-template-columns: 0.3fr 1.7fr;
     grid-template-rows: 1fr;
     gap: 1em 1em;
-    grid-template-areas: ". .";
+    grid-template-areas: "sidebar content";
     margin: 1em;
 
 }
 
 .sidebar {
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    grid-area: sidebar;
+    height: 100%;
+    position: fixed;
+    top: 0;
     left: 0;
-    background-color: #C4C4C4; /* Black */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding: 1em 0;
-
-
-}
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
 
 /* The navigation menu links */
 .sidebar a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    color: #333;
+    font-size: 1em;
+    color: #FFFFFF;
     display: block;
-}
-
+  }
+  
 .sidebar a:hover {
     background-color: grey;
+    transition: background 0.5s, border-color 0.5s, color 0.5s;
 }
 
 .active {
     background-color: grey;
+}
+
+.content { 
+    grid-area: content; 
+    
 }
 
 /* ---------- TABLES ------------- */
@@ -117,13 +126,14 @@ body {
 
 .admin-table tr:hover {
     background-color: #f5f5f5;
-
+    transition: background 0.25s, border-color 0.5s, color 0.25s;
 }
 
 .admin-table td {
     padding: 1em;
     border-bottom: 1px solid #ddd;
 }
+
 
 .admin-table td a {
     display: block;
@@ -307,7 +317,7 @@ body {
     background: #1873cc;
 }
 
-<!-- TODO: POPRAWIĆ FLEXA > CHILDY -->
+/*-- TODO: POPRAWIĆ FLEXA > CHILDY */
 
 /* -------------- LOGIN FORM -------------------- */
 
