--- a/templates/admin_panel/users/user_add.html.twig
+++ b/templates/admin_panel/users/user_add.html.twig
@@ -2,15 +2,68 @@
 
 
 {% block content %}
-    <h1>Dodaj użytkownika</h1>
-    {{ form_start(addUserForm) }}
-    {{ form_row(addUserForm.email) }}
-    {{ form_row(addUserForm.password) }}
-    {{ form_row(addUserForm.imie) }}
-    {{ form_row(addUserForm.nazwisko) }}
-    {{ form_widget(addUserForm.roles) }}
-
-
-    <button class="btn">Dodaj</button>
-    {{ form_end(addUserForm) }}
+    <div class="container">
+        {{ form_start(addUserForm, {'attr': {'class': 'form', 'autocomplete':'off'}}) }}
+        <div class="form-title">Dodaj użytkownika</div>
+        
+        <div class="form-item-col">
+            {{ form_label(addUserForm.email, 'E-mail', {'attr': {'class' : 'form-label'}} ) }}
+            {% if form_errors(addUserForm.email) %}
+                {{ form_widget(addUserForm.email, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+            {% else %}
+                {{ form_widget(addUserForm.email, {'attr': {'class' : 'form-input'}} ) }}
+            {% endif %}
+            <span class="form-error">{{ form_errors(addUserForm.email) }}</span>
+        </div>
+        <div class="form-item-col">
+            {{ form_label(addUserForm.password.first, 'Hasło', {'attr': {'class' : 'form-label'}} ) }}
+            {% if form_errors(addUserForm.password.first) %}
+                {{ form_widget(addUserForm.password.first, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+            {% else %}
+                {{ form_widget(addUserForm.password.first, {'attr': {'class' : 'form-input'}} ) }}
+            {% endif %}
+        </div>
+        <div class="form-item-col">
+            {{ form_label(addUserForm.password.second, 'Powtórz hasło', {'attr': {'class' : 'form-label'}} ) }}
+            {% if form_errors(addUserForm.password.first) %}
+                {{ form_widget(addUserForm.password.second, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+            {% else %}
+                {{ form_widget(addUserForm.password.second, {'attr': {'class' : 'form-input'}} ) }}
+            {% endif %}
+            <span class="form-error">{{ form_errors(addUserForm.password.first) }}</span>
+        </div>
+        <div class="form-item-row">
+            <div class="form-item-col">
+                {{ form_label(addUserForm.imie, 'Imię', {'attr': {'class' : 'form-label'}} ) }}
+                {% if form_errors(addUserForm.imie) %}
+                    {{ form_widget(addUserForm.imie, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+                {% else %}
+                    {{ form_widget(addUserForm.imie, {'attr': {'class' : 'form-input'}} ) }}
+                {% endif %}
+                <span class="form-error">{{ form_errors(addUserForm.imie) }}</span>
+            </div>
+            <div class="form-item-col">
+                {{ form_label(addUserForm.nazwisko, 'Nazwisko', {'attr': {'class' : 'form-label'}} ) }}
+                {% if form_errors(addUserForm.nazwisko) %}
+                    {{ form_widget(addUserForm.nazwisko, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+                {% else %}
+                    {{ form_widget(addUserForm.nazwisko, {'attr': {'class' : 'form-input'}} ) }}
+                {% endif %}
+                <span class="form-error">{{ form_errors(addUserForm.nazwisko) }}</span>
+            </div>
+            <div class="form-item-col">
+                {{ form_label(addUserForm.roles, 'Nazwisko', {'attr': {'class' : 'form-label'}} ) }}
+                {% if form_errors(addUserForm.roles) %}
+                    {{ form_widget(addUserForm.roles, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+                {% else %}
+                    {{ form_widget(addUserForm.roles, {'attr': {'class' : 'form-input'}} ) }}
+                {% endif %}
+                <span class="form-error">{{ form_errors(addUserForm.roles) }}</span>
+            </div>
+        </div>
+        <div class="form-item-col">
+            {{ form_widget(addUserForm.submit, {'attr': {'class' : 'form-btn'}} ) }}
+        </div>
+            
+            {{ form_end(addUserForm) }}
 {% endblock %}
