--- a/templates/admin_panel/users/users.html.twig
+++ b/templates/admin_panel/users/users.html.twig
@@ -18,7 +18,7 @@
             <th>Imie</th>
             <th>Nazwisko</th>
             <th>Rola</th>
-            <th>Akcje</th>
+            <th colspan="2">Akcje</th>
         </tr>
         {% for user in users %}
         <tr>
@@ -28,6 +28,7 @@
             <td>{{ user.nazwisko }}</td>
             <td>{{ user.roles[0] }}</td>
             <td><a class="add" href="{{ path('admin.user_profile', {id:user.id}) }}">Edytuj</a></td>
+            <td><a class="delete" href="{{ path('admin.user_delete', {id:user.id}) }}">Usuń</a></td>
         </tr>
         {% endfor %}
     </table>
