--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl-PL">
     <head>
-        <meta charset="iso-8859-2">
+        <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>{% block title %}Index{% endblock %}</title>
         {% block stylesheets %}
