--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,9 @@
                 </li>
                 {% endif %}
                 <li class="navbar-li">
+                    <a href="{{ path('wizyta') }}" class="">Umów się na wizytę</a>
+                </li>
+                <li class="navbar-li">
                     <a href="#" class="">Kontakt</a>
                 </li>
                 <li class="navbar-li">
