--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,21 @@
         <title>{% block title %}Index{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css"> 
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
+        {% endblock %}
+        {% block javascripts %}
             <script
                 src="https://code.jquery.com/jquery-3.5.0.slim.min.js"
                 integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs="
                 crossorigin="anonymous"></script>
-        {% endblock %}
+            <script src="{{ asset('js/moment.js') }}"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.js"></script>
+        {% endblock javascripts %}
     </head>
     <body>
     <header>
@@ -46,7 +56,9 @@
                 </li>
             </ul>
     </header>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+    {% endblock %}
 
     </body>
 </html>
