--- a/templates/wizyta/terminy.html.twig
+++ b/templates/wizyta/terminy.html.twig
@@ -10,7 +10,8 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
     var calendarEl = document.getElementById('calendar-holder');
-
+    var now = new Date();
+    var end = new Date();
     var calendar = new FullCalendar.Calendar(calendarEl, {
         defaultView: 'timeGridWeek',
         editable: true,
@@ -26,7 +27,8 @@
         navLinks: true,
         hour12:false,
         validRange: {
-         start: Date.now()
+         start: now.setDate(now.getDate()+1),
+         end: end.setMonth(end.getMonth()+1)
         },
         buttonText: {
             today: 'dziś',
