--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
                 </li>
                 {% endif %}
                 <li class="navbar-li">
-                    <a href="{{ path('wizyta') }}" class="">Umów się na wizytę</a>
+                    <a href="{{ path('visit') }}" class="">Umów się na wizytę</a>
                 </li>
                 <li class="navbar-li">
                     <a href="#" class="">Kontakt</a>
