--- a/templates/admin_panel/unit/add.html.twig
+++ b/templates/admin_panel/unit/add.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
-     <h1>{{ poradnia.nazwa }}</h1>
+     <h1>{{ clinic.nazwa }}</h1>
      <h3>Dodaj lekarza do poradni</h3>
      <table class="admin-table">
           <tr>
@@ -10,13 +10,13 @@
                <th>Specjalizacja</th>
                <th></th>
           </tr>
-          {% for lekarz in lekarze %}
+          {% for d in doctors %}
                <tr>
-                    <td>{{ lekarz.numerPWZ }}</td>
-                    <td>{{ lekarz.nazwisko ~ ' ' ~ lekarz.imie }}</td>
-                    <td>{{ lekarz.specjalizacja }}</td>
+                    <td>{{ d.numPwz }}</td>
+                    <td>{{ d.lastName ~ ' ' ~ d.name }}</td>
+                    <td>{{ d.spec }}</td>
                     <td>
-                         <a class="add" href="{{ path('admin.jednostka_create', {id_lekarza: lekarz.id, id_poradni: poradnia.id}) }}">Dodaj</a>
+                         <a class="add" href="{{ path('admin.unit_create', {idDoctor: d.id, idCLinic: clinc.id}) }}">Dodaj</a>
                     </td>
                </tr>
           {% endfor %}
